Bug 118719 - Whitespace is not Hidden in Cases with Page and Column Breaks
Summary: Whitespace is not Hidden in Cases with Page and Column Breaks
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium minor
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Page-Break
  Show dependency treegraph
 
Reported: 2018-07-12 10:50 UTC by Harald Koester
Modified: 2019-08-20 13:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Koester 2018-07-12 10:50:51 UTC
In order to reproduce the bug:

[1] Create new text document.
[2] Hide whitespace with menu: View > Hide Whitespace
[3] Insert some text into first line.
[4] Insert a manual page break: Ctrl + Enter. Page 1 is completely displayed without the top and bottom area. Expected: Only the first line should be displayed followed directly by a page break line.
[5] Disable and enable whitespace view again: Twice: View > Hide Whitespace. Now the display is OK. Only the first line of page 1 is displayed.
[6] Format pages with 2 columns: Format > Page… > Columns. Only the first line of page 1 is displayed. This is OK.
[7] Disable and enable whitespace view again: Twice: View > Hide Whitespace. Page 1 is now completely displayed without top and bottom area. Expected: Display like at step 6.

The function Hide Whitespace was introduced in version 5.1.0. The problem of step 4 exists since version 5.1.1 and the problem of step 7 since version 5.1.0.

Tested with version 6.0.5 (64 bit, Win10).
Comment 1 Dieter 2018-07-12 12:22:45 UTC
I confirm the observed behaviour, but I think - regarding to the documentation - that the result in step 4 is the bug:

Desription of "Hide Whitespace" in documentation: "View documents with the white space found at the end and beginning of pages hidden."
Comment 2 Buovjaga 2018-07-18 14:08:04 UTC
Bibisected step 4 to https://cgit.freedesktop.org/libreoffice/core/commit/?id=49b67cdc36b599f865d4a6de214d901861f27196
tdf#96961 sw Hide Whitespace: still show whitespace on the last page
Mainly to match Word's hide whitespace behavior.

Adding Cc: to Miklos Vajna

Miklos: tl;dr is you have to activate Hide Whitespace twice to see the correct result.

Note that the order of steps is crucial: you have to activate Hide Whitespace first, before anything else.

It works correctly, if you activate it after typing + page break.
Comment 3 Miklos Vajna 2018-10-23 12:19:08 UTC
Hrm, on master I can't reproduce this, an empty document has View -> Hide whitespace disabled. Or do I miss something?
Comment 4 Buovjaga 2018-10-23 12:46:11 UTC
(In reply to Miklos Vajna from comment #3)
> Hrm, on master I can't reproduce this, an empty document has View -> Hide
> whitespace disabled. Or do I miss something?

This seems to be a very recent regression. If you add text, the setting is still disabled. I did git pull for 6.2 win bibisect repo, but the last commit from 9 Oct does not show the problem: https://cgit.freedesktop.org/libreoffice/core/commit/?id=425af6845ebe066c950b0b63f50563e067485f3e
Comment 5 Dieter 2018-10-23 13:35:05 UTC
I still can reproduce all steps from comment 0 with

Version: 6.2.0.0.alpha1+ (x64)
Build ID: 8274c4c62df5b937b3f0bec9e1eeca85f3b219d4
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-22_01:47:50
Locale: en-US (de_DE); Calc: CL

Hide whitespace is disabled by default. And therefore the second step to reproduce the bug is to enable whitespace. You can also reproduce the bug, if you
1. type a line of text
2. enable hide whitespace
3. Enter manual page break

As Buovjaga pointed out, it works correctly, if you activate whitespace after typing + page break.
Comment 6 Buovjaga 2018-10-23 14:12:03 UTC
(In reply to Buovjaga from comment #4)
> (In reply to Miklos Vajna from comment #3)
> > Hrm, on master I can't reproduce this, an empty document has View -> Hide
> > whitespace disabled. Or do I miss something?
> 
> This seems to be a very recent regression. If you add text, the setting is
> still disabled. I did git pull for 6.2 win bibisect repo, but the last
> commit from 9 Oct does not show the problem:
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=425af6845ebe066c950b0b63f50563e067485f3e

Argh, this was not a regression, but some profile corruption. Maybe Miklos hit it as well.
Comment 7 Commit Notification 2019-05-14 07:13:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/c4589dd7141f931513827367b457f481d960b774%5E%21

tdf#118719 sw Hide Whitespace: fix height of last-but-one page

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2019-05-15 07:06:12 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/64a45eb390ed12efefe3d1a074282d816afb51ed%5E%21

tdf#118719 sw Hide Whitespace: fix height of last-but-one page

It will be available in 6.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2019-05-17 11:46:40 UTC
> Hide whitespace is disabled by default. And therefore the second step to
> reproduce the bug is to enable whitespace. You can also reproduce the bug,
> if you
> 1. type a line of text
> 2. enable hide whitespace
> 3. Enter manual page break


Verified in

Version: 6.3.0.0.alpha0+
Build ID: c2c7a802e58527a5e572e903a206fe0be6c34172
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 10 Harald Koester 2019-08-20 13:08:16 UTC
The issue of step 7 of the initial report is not solved with the commits. For this issue I wrote a new bug report: Bug 127054.