tdf#118719 sw Hide Whitespace: fix height of last-but-one page

Regression from commit 49b67cdc36b599f865d4a6de214d901861f27196
(tdf#96961 sw Hide Whitespace: still show whitespace on the last page,
2016-01-08), the problem was that in case a page used to be the last one
but no longer is, then its height was kept unchanged.

Fix this by invalidating the size of the old last page after the
insertion of the new last page, this way SwPageFrame::MakeAll() will be
called later to resize the page.

(cherry picked from commit c4589dd7141f931513827367b457f481d960b774)

Conflicts:
	sw/qa/extras/layout/layout.cxx

Change-Id: I672a70a77af5d306b1f8bd0b5ad6c2e375497124